# Anti-Debug-Kapani

./: .gitattributes  .gitignore  CHANGELOG.md  CHECKUP.md  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODO.md  cmake_install.cmake  main.cpp
.github/workflows/: build.yml
docs/: COMMIT_CONVENTION.md  GELISTIRICI_NOTLARI.md  ollama-security-analysis.md
src/detectors/: HandleDetector.cpp  HandleDetector.h  HeapFlagDetector.cpp  HeapFlagDetector.h  TimingDetector.cpp  TimingDetector.h
src/evasion/: MemoryEraser.cpp  MemoryEraser.h
src/utils/: Logger.cpp  Logger.h
tests/: test_detectors.cpp
